Upgrading node libraries for frontend

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,15 @@
 FROM node:lts
 
+RUN apt update
+RUN npm install -g pnpm
+
+COPY package.json /tmp/package.json
+
+RUN cd /tmp && pnpm install
+RUN mkdir -p /frontend && cp -a /tmp/node_modules /frontend
+
 WORKDIR /frontend
-
 COPY . .
-
-RUN npm install
 
 EXPOSE 3000
 
