--- a/etc/prometheus/prometheus.yml
+++ b/etc/prometheus/prometheus.yml
@@ -6,20 +6,17 @@ global:
 # Here it's Prometheus itself.
 scrape_configs:
   # The job name is added as a label `job=<job_name>` to any time series scraped from this config.
+  # metrics_path defaults to '/metrics'
+  # scheme defaults to 'http'.
   - job_name: "prometheus"
-
-    # metrics_path defaults to '/metrics'
-    # scheme defaults to 'http'.
-
     static_configs:
       - targets: ["localhost:9090"]
   - job_name: "backend"
     scrape_interval: 5s
-    # metrics_path defaults to '/metrics'
-    # scheme defaults to 'http'.
     static_configs:
       - targets: ["backend:5000"]
 
-  # - job_name: 'statsd-exporter'
-  #   static_configs:
-  #     - targets: ['statsd-exporter:9102']
+  - job_name: 'cadvisor'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['cadvisor:8080']
