--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     networks:
       - observability
   loki:
-    image: grafana/loki:2.9.2
+    image: grafana/loki:3.6.5
     ports:
       - "3100:3100"
     command: -config.file=/etc/loki/local-config.yaml
@@ -25,9 +25,16 @@ services:
       - observability
 
   promtail:
-    image: grafana/promtail:2.9.2
+    image: grafana/promtail:3.6.5
     volumes:
-      - /var/log:/var/log
+      # System logs
+      - /var/log:/var/log:ro
+      # Docker container logs
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      # Docker socket (optional, required for docker_sd_configs)
+      # - /var/run/docker.sock:/var/run/docker.sock:ro
+      # Local promtail config
+      # - ./etc/promtail/config.yml:/etc/promtail/config.yml:ro
     command: -config.file=/etc/promtail/config.yml
     networks:
       - observability
@@ -46,7 +53,7 @@ services:
       - observability
 
   prometheus:
-    image: prom/prometheus:v2.55.1
+    image: prom/prometheus:v3.9.1
     ports:
       - "9090:9090"
     volumes:
