Update package ecosystems in dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,11 +9,11 @@ updates:
     directory: "/" 
     schedule:
       interval: "weekly"
-  - package-ecosystem: "python" 
+  - package-ecosystem: "pip" 
     directory: "/backend" 
     schedule:
       interval: "weekly"
-  - package-ecosystem: "pnpm" 
+  - package-ecosystem: "npm" 
     directory: "/frontend" 
     schedule:
       interval: "weekly"
