--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
-version: '3'
 networks:
   observability:
 services:
   backend:
     privileged: true
     build: ./backend
+    environment:
+      - SENTRY_DSN_BACKEND=${SENTRY_DSN_BACKEND:-}
     ports:
       - "5000:5000"
     networks:
@@ -12,6 +13,8 @@ services:
   frontend:
     privileged: true
     build: ./frontend
+    environment:
+      - SENTRY_DSN_FRONTEND=${SENTRY_DSN_FRONTEND:-}
     ports:
       - "3000:3000"
     networks:
